[package]
name = "vex"
version = "0.1.0"
edition = "2024"

[build]
rustflags = ["--cfg", "reqwest_unstable"]


[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["rustls-tls", "http3", "stream"] }
futures = "0.3"

h3 = "0.0.8"
rustls = { version = "0.23.31", features = ["ring"] }
quinn = "0.11.9"
